Fix overlapping elements and sticky header on iOS

--- a/css/style.css
+++ b/css/style.css
@@ -533,7 +533,7 @@ button {
     background-color: rgb(20, 20, 20);
     opacity: 0.9;
     position: absolute;
-    top: 79px;
+    top: 80px;
     bottom: 0;
     left: 0;
     width: 100%;
@@ -547,6 +547,7 @@ button {
     align-items: center;
     align-self: flex-start;
     position: sticky;
+    position: -webkit-sticky;
     top: 57px;
     background-color: rgba(20, 20, 20, 0.9);
     opacity: 1;
